--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -6,6 +6,7 @@
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 6rem;
   align-items: start;
+  padding: 0 1rem;
 }
 
 .feature {
