--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -5,6 +5,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 7rem;
+  padding: 0 1rem;
 }
 
 .home {
